# approx_entropy

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md
examples/: bootstrap.rs  fixed_partition.rs  single_sample.rs  uniform.rs
src/: estimator.rs  lib.rs  main.rs  sampling_method.rs  traits.rs  utils.rs
src/estimator/: direct.rs  naive.rs
src/sampling_method/: bootstrap.rs  coherent.rs  fixed_partition.rs
tests/: entropy_computation.rs
