[package]
name = "approx_entropy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
nalgebra = "0.29.0"
thiserror = "1.0.28"

[dev-dependencies]
test-case = "1.2.0"
float_eq = "0.6.1"
rand_pcg = "0.3.1"
preexplorer = "0.4.1"
